Update frontend API URLs to use dynamic configuration for production deployment

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/tpo-website
+MONGODB_URI=mongodb+srv://tpo_user:HARSH123@cluster0.nrjv1ah.mongodb.net/tpo-website?retryWrites=true&w=majority&appName=Cluster0
 
 # Email Configuration
 EMAIL_USER=tpo
