--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -8,4 +8,12 @@ services:
       - key: NODE_ENV
         value: production
       - key: PORT
-        value: 5000 
+        value: 5000
+      - key: MONGODB_URI
+        value: mongodb+srv://tpo_user:HARSH123@cluster0.nrjv1ah.mongodb.net/tpo-website?retryWrites=true&w=majority&appName=Cluster0
+      - key: EMAIL_USER
+        value: tpo
+      - key: EMAIL_PASS
+        value: ldbf wfje awut wnow
+      - key: ADMIN_EMAIL
+        value: harshalkar0504@gmail.com 
